tests/snapshots/run_wpt_conformance__trtx_neg_int32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg int32 4D tensor",
    "trtx",
    "PASS",
)
