tests/snapshots/run_wpt_conformance__trtx_notEqual_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "not_equal.https.any.js",
    "notEqual float16 1D constant tensors",
    "trtx",
    Failed {
        msg: Some(
            "not_equal :: notEqual float16 1D constant tensors: index 2: actual=0 expected=1 tolerance=0\n  inputs: inputA: [2.806640625, 5.58984375, 2.85546875, 4.99609375, 0.97265625, -4.7421875, 2.806640625, 5.58984375, -5.109375, 6.625, -2.3203125, -7.0546875, 2.806640625, 5.58984375, 4.98046875, -5.44140625, 1.1455078125, 7.7734375, 2.806640625, 5.58984375, -6.24609375, -2.849609375, -2.6953125, 5.81640625] (constant); inputB: [2.806640625, 5.58984375, -4.83984375, 4.99609375, 0.97265625, -6.171875, 2.806640625, 5.58984375, 7.765625, -4.30859375, -5.89453125, -8.53125, 2.806640625, 5.58984375, 0.1783447265625, -4.48046875, 0.68212890625, -6.6875, 2.806640625, 5.58984375, -9.0390625, -1.97265625, -3.01171875, 3.626953125] (constant)\n  expected output: [0, 0, 1, 0, 0, 1, 0, 0, 1, 1 ...] (len=24)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[0, 0, 1, 0, 0, 1, 0, 0, 1, 1, ...] (len=24, shape=[24])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f16[24] @bytes([157, 65, 151, 69, 182, 65, 255, 68, 200, 59, 190, 196, 157, 65, 151, 69, 28, 197, 160, 70, 164, 192, 14, 199, 157, 65, 151, 69, 251, 68, 113, 197, 149, 60, 198, 71, 157, 65, 151, 69, 63, 198, 179, 193, 100, 193, 209, 69]);\n    operand_1: f16[24] @bytes([157, 65, 151, 69, 215, 196, 255, 68, 200, 59, 44, 198, 157, 65, 151, 69, 196, 71, 79, 196, 229, 197, 68, 200, 157, 65, 151, 69, 181, 49, 123, 196, 117, 57, 176, 198, 157, 65, 151, 69, 133, 200, 228, 191, 6, 194, 65, 67]);\n  }\n\n  nodes {\n    [output] = notEqual(operand_0, operand_1, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
